--- a/JS atsiskaitymas/Task 3/style.css
+++ b/JS atsiskaitymas/Task 3/style.css
@@ -59,3 +59,23 @@
   border-radius: 5px;
   background-color: #fff;
 }
+
+/* */
+
+ul {
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(130px, 1fr) );
+  margin: 0 auto;
+  gap: 1rem;
+  list-style-type: none;
+}
+
+#output > ul > li > img {
+  height:10vh;
+}
+
+#output > ul > li {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+}
