--- a/JS atsiskaitymas/Task 1/style.css
+++ b/JS atsiskaitymas/Task 1/style.css
@@ -27,8 +27,8 @@
   padding-top: 50px;
   font-size: 2em;
   text-align: center;
-  color: #000;
-  text-transform: uppercase;
+  color: purple;
+  font-variant-caps:all-small-caps;
 }
 
 form {
